# opengl_phong

./: CMakeLists.txt  README.md  spinningcube_withlight_SKEL.cpp  spinningcube_withlight_fs_SKEL.glsl  spinningcube_withlight_vs_SKEL.glsl
shapes/: cube.h  tetrahedron.h
